--- a/css/nav.css
+++ b/css/nav.css
@@ -2,96 +2,78 @@
 
 
 
-div.container a
-{
+div.container a {
     color: #FFF;
     text-decoration: none;
     font: 20px Raleway;
-    margin: 0px 10px;
     padding: 10px 10px;
     position: relative;
     z-index: 0;
     cursor: pointer;
 }
 
-.red
-{
+.red {
     background: #f44336;
 }
 
-.purple
-{
+.purple {
     background: #673ab7;
 }
 
-.indigo
-{
+.indigo {
     background: #3f51b5;
 }
 
-.blue
-{
+.blue {
     background: #2196f3;
 }
 
-.cyan
-{
+.cyan {
     background: #00bcd4;
 }
 
-.teal
-{
+.teal {
     background: #009688;
 }
 
-.green
-{
+.green {
     background: #4caf50;
 }
 
-.lightGreen
-{
+.lightGreen {
     background: #8bc34a;
 }
 
-.lime
-{
+.lime {
     background: #c0ca33;
 }
 
-.yellow
-{
+.yellow {
     background: #fdd835;
 }
 
-.amber
-{
+.amber {
     background: #ffc107;
 }
 
-.orange
-{
+.orange {
     background: #ff9800
 }
 
-.deepOrange
-{
+.deepOrange {
     background: #ff5722;
 }
 
-.brown
-{
+.brown {
     background: #795548;
 }
 
-.gray
-{
+.gray {
     background: #9e9e9e;
 }
 
 /* Top and Bottom borders go out */
-div.topBotomBordersOut a:before, div.topBotomBordersOut a:after
-{
+div.topBotomBordersOut a:before, div.topBotomBordersOut a:after {
     position: absolute;
     left: 0px;
     width: 100%;
@@ -102,27 +84,23 @@ div.topBotomBordersOut a:before, div.topBotomBordersOut a:after
     transition: all 0.3s;
 }
 
-div.topBotomBordersOut a:before
-{
+div.topBotomBordersOut a:before {
     top: 0px;
     transform: translateY(10px);
 }
 
-div.topBotomBordersOut a:after
-{
+div.topBotomBordersOut a:after {
     bottom: 0px;
     transform: translateY(-10px);
 }
 
-div.topBotomBordersOut a:hover:before, div.topBotomBordersOut a:hover:after
-{
+div.topBotomBordersOut a:hover:before, div.topBotomBordersOut a:hover:after {
     opacity: 1;
     transform: translateY(0px);
 }
 
 /* Top and Bottom borders come in */
-div.topBotomBordersIn a:before, div.topBotomBordersIn a:after
-{
+div.topBotomBordersIn a:before, div.topBotomBordersIn a:after {
     position: absolute;
     left: 0px;
     width: 100%;
@@ -133,27 +111,23 @@ div.topBotomBordersIn a:before, div.topBotomBordersIn a:after
     transition: all 0.3s;
 }
 
-div.topBotomBordersIn a:before
-{
+div.topBotomBordersIn a:before {
     top: 0px;
     transform: translateY(-10px);
 }
 
-div.topBotomBordersIn a:after
-{
+div.topBotomBordersIn a:after {
     bottom: 0px;
     transform: translateY(10px);
 }
 
-div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after
-{
+div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after {
     opacity: 1;
     transform: translateY(0px);
 }
 
 /* Top border go down and Left border appears */
-div.topLeftBorders a:before
-{
+div.topLeftBorders a:before {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -165,8 +139,7 @@ div.topLeftBorders a:before
     transition: all 0.3s;
 }
 
-div.topLeftBorders a:after
-{
+div.topLeftBorders a:after {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -178,20 +151,17 @@ div.topLeftBorders a:after
     transition: all 0.3s;
 }
 
-div.topLeftBorders a:hover:before
-{
+div.topLeftBorders a:hover:before {
     height: 100%;
 }
 
-div.topLeftBorders a:hover:after
-{
+div.topLeftBorders a:hover:after {
     opacity: 0;
     top: 100%;
 }
 
 /* Circle behind */
-div.circleBehind a:before, div.circleBehind a:after
-{
+div.circleBehind a:before, div.circleBehind a:after {
     position: absolute;
     top: 22px;
     left: 50%;
@@ -207,27 +177,23 @@ div.circleBehind a:before, div.circleBehind a:after
     z-index: -1;
 }
 
-div.circleBehind a:after
-{
+div.circleBehind a:after {
     border-width: 2px;
     transition: all 0.4s;
 }
 
-div.circleBehind a:hover:before
-{
+div.circleBehind a:hover:before {
     opacity: 1;
     transform: translateX(-50%) translateY(-50%) scale(1);
 }
 
-div.circleBehind a:hover:after
-{
+div.circleBehind a:hover:after {
     opacity: 1;
     transform: translateX(-50%) translateY(-50%) scale(1.3);
 }
 
 /* Brackets go out */
-div.brackets a:before, div.brackets a:after
-{
+div.brackets a:before, div.brackets a:after {
     position: absolute;
     opacity: 0;
     font-size: 35px;
@@ -235,30 +201,26 @@ div.brackets a:before, div.brackets a:after
     transition: all 0.3s;
 }
 
-div.brackets a:before
-{
+div.brackets a:before {
     content: '(';
     left: 0px;
     transform: translateX(10px);
 }
 
-div.brackets a:after
-{
+div.brackets a:after {
     content: ')';
     right: 0px;
     transform: translateX(-10px);
 }
 
-div.brackets a:hover:before, div.brackets a:hover:after
-{
+div.brackets a:hover:before, div.brackets a:hover:after {
     opacity: 1;
     transform: translateX(0px);
 }
 
 
 /* Border from Y to X  */
-div.borderYtoX a:before, div.borderYtoX a:after
-{
+div.borderYtoX a:before, div.borderYtoX a:after {
     position: absolute;
     opacity: 0.5;
     height: 100%;
@@ -268,28 +230,24 @@ div.borderYtoX a:before, div.borderYtoX a:after
     transition: all 0.3s;
 }
 
-div.borderYtoX a:before
-{
+div.borderYtoX a:before {
     left: 0px;
     top: 0px;
 }
 
-div.borderYtoX a:after
-{
+div.borderYtoX a:after {
     right: 0px;
     bottom: 0px;
 }
 
-div.borderYtoX a:hover:before, div.borderYtoX a:hover:after
-{
+div.borderYtoX a:hover:before, div.borderYtoX a:hover:after {
     opacity: 1;
     height: 2px;
     width: 100%;
 }
 
 /* Border X get width  */
-div.borderXwidth a:before, div.borderXwidth a:after
-{
+div.borderXwidth a:before, div.borderXwidth a:after {
     position: absolute;
     opacity: 0;
     width: 0%;
@@ -299,27 +257,23 @@ div.borderXwidth a:before, div.borderXwidth a:after
     transition: all 0.3s;
 }
 
-div.borderXwidth a:before
-{
+div.borderXwidth a:before {
     left: 0px;
     top: 0px;
 }
 
-div.borderXwidth a:after
-{
+div.borderXwidth a:after {
     right: 0px;
     bottom: 0px;
 }
 
-div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
-{
+div.borderXwidth a:hover:before, div.borderXwidth a:hover:after {
     opacity: 1;
     width: 100%;
 }
 
 /* Pull down  */
-div.pullDown a:before
-{
+div.pullDown a:before {
     position: absolute;
     width: 100%;
     height: 2px;
@@ -331,14 +285,12 @@ div.pullDown a:before
     transition: all 0.3s;
 }
 
-div.pullDown a:hover:before
-{
+div.pullDown a:hover:before {
     height: 100%;
 }
 
 /* Pull up  */
-div.pullUp a:before
-{
+div.pullUp a:before {
     position: absolute;
     width: 100%;
     height: 2px;
@@ -350,14 +302,12 @@ div.pullUp a:before
     transition: all 0.3s;
 }
 
-div.pullUp a:hover:before
-{
+div.pullUp a:hover:before {
     height: 100%;
 }
 
 /* Pull right  */
-div.pullRight a:before
-{
+div.pullRight a:before {
     position: absolute;
     width: 2px;
     height: 100%;
@@ -369,14 +319,12 @@ div.pullRight a:before
     transition: all 0.3s;
 }
 
-div.pullRight a:hover:before
-{
+div.pullRight a:hover:before {
     width: 100%;
 }
 
 /* Pull left  */
-div.pullLeft a:before
-{
+div.pullLeft a:before {
     position: absolute;
     width: 2px;
     height: 100%;
@@ -388,14 +336,12 @@ div.pullLeft a:before
     transition: all 0.3s;
 }
 
-div.pullLeft a:hover:before
-{
+div.pullLeft a:hover:before {
     width: 100%;
 }
 
 /* Pull up and down  */
-div.pullUpDown a:before, div.pullUpDown a:after
-{
+div.pullUpDown a:before, div.pullUpDown a:after {
     position: absolute;
     width: 100%;
     height: 2px;
@@ -406,24 +352,20 @@ div.pullUpDown a:before, div.pullUpDown a:after
     transition: all 0.3s;
 }
 
-div.pullUpDown a:before
-{
+div.pullUpDown a:before {
     top: 0px;
 }
 
-div.pullUpDown a:after
-{
+div.pullUpDown a:after {
     bottom: 0px;
 }
 
-div.pullUpDown a:hover:before, div.pullUpDown a:hover:after
-{
+div.pullUpDown a:hover:before, div.pullUpDown a:hover:after {
     height: 100%;
 }
 
 /* Pull right and left  */
-div.pullRightLeft a:before, div.pullRightLeft a:after
-{
+div.pullRightLeft a:before, div.pullRightLeft a:after {
     position: absolute;
     width: 2px;
     height: 100%;
@@ -434,29 +376,24 @@ div.pullRightLeft a:before, div.pullRightLeft a:after
     transition: all 0.3s;
 }
 
-div.pullRightLeft a:before
-{
+div.pullRightLeft a:before {
     left: 0px;
 }
 
-div.pullRightLeft a:after
-{
+div.pullRightLeft a:after {
     right: 0px;
 }
 
-div.pullRightLeft a:hover:before, div.pullRightLeft a:hover:after
-{
+div.pullRightLeft a:hover:before, div.pullRightLeft a:hover:after {
     width: 100%;
 }
 
 /* Highlight text out  */
-div.highlightTextOut a
-{
+div.highlightTextOut a {
     color: rgba(255, 255, 255, 0.3);
 }
 
-div.highlightTextOut a:before, div.highlightTextIn a:before
-{
+div.highlightTextOut a:before, div.highlightTextIn a:before {
     position: absolute;
     color: #FFF;
     top: 0px;
@@ -469,19 +406,16 @@ div.highlightTextOut a:before, div.highlightTextIn a:before
     opacity: 0;
 }
 
-div.highlightTextOut a:hover:before, div.highlightTextIn a:hover:before
-{
+div.highlightTextOut a:hover:before, div.highlightTextIn a:hover:before {
     transform: scale(1);
     opacity: 1;
 }
 
 /* Highlight text in  */
-div.highlightTextIn a
-{
+div.highlightTextIn a {
     color: rgba(0, 0, 0, 0.4);
 }
 
-div.highlightTextIn a:before
-{
+div.highlightTextIn a:before {
     transform: scale(1.2);
 }
