--- a/css/style.css
+++ b/css/style.css
@@ -97,22 +97,23 @@ h2 {
 	width: 60px;
 }
 
-
-div .icon {
-  width: 50px;
-}
-
 .header {
   position: fixed;
   width: 100%;
   background-color: #4DD261;
   color: white;
   display: flex;
-  height: 60px;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  z-index: 4;
+}
+
+.titulo {
+  font-size: 1.5em;
+}
+
+div .icon {
+  width: 50px;
 }
 
 .justificar {
@@ -224,103 +225,6 @@ div .redes {
   margin-left: 20px;
 }
 
-.event {
-  margin: 1%;
-  width: 48%;
-  flex-shrink: 0;
-  border-radius: 10px;
-  overflow: hidden;
-  background: #f4fbff;
-}
-
-.event img {
-  width: 480px;
-  height: 200px;
-  object-fit: cover;
-}
-
-.event-detail {
-  margin: 20px 40px;
-  margin-top: -40px;
-  background-color: white;
-  position: relative;
-  padding: 20px;
-  text-align: center;
-}
-
-.event-description {
-  text-align: left;
-}
-
-.event-url {
-  color: #056fff;
-  border: 1px solid;
-  padding: 5px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-}
-
-.contact {
-  background-color: #056fff;
-  color: white;
-  height: 150px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.social {}
-
-.social-link {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  margin: 0 10px;
-  background-size: 50px 50px;
-}
-
-.social-link.twitter {
-  background-image: url('../images/twitter.svg');
-}
-
-.social-link.facebook {
-  background-image: url('../images/facebook.svg');
-}
-
-.social-link.github {
-  background-image: url('../images/github.svg');
-}
-
-.social-link.instagram {
-  background-image: url('../images/instagram.svg');
-}
-
-.form-email input {
-  border-color: gray;
-  border-style: solid;
-  border-radius: 5px;
-  padding: 10px 20px 10px 25px;
-  background-image: url('../images/envelope.svg');
-  background-size: 15px 15px;
-  background-repeat: no-repeat;
-  background-position-y: center;
-  background-position-x: 5px;
-}
-
-.form-email button {
-  display: block;
-  background: transparent;
-  color: white;
-  padding: 10px 0;
-  border-radius: 5px;
-  width: 100px;
-  margin-top: 10px;
-}
-
-.form-email h3 {
-  font-family: 'Source Sans Pro', sans-serif;
-}
 
 .container {
   /* border: 1px solid red; */
@@ -335,21 +239,6 @@ div .redes {
   flex-wrap: inherit;
 }
 
-.burger-button {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: rgba(0, 0, 0, .8);
-  display: none;
-  line-height: 40px;
-  text-align: center;
-  position: fixed;
-  z-index: 5;
-  left: 5px;
-  top: 5px;
-  color: white;
-}
-
 section .container {
   padding: 2em;
 }
@@ -360,6 +249,10 @@ section .container {
 @media screen and (max-width: 1023px) {
   .event-list-title {
     margin-left: 0;
+  }
+
+  .titulo {
+    font-size: 1em;
   }
 
   .portfolio {
@@ -529,6 +422,10 @@ section .container {
     font-size: 1.5em;
   }
 
+  #header img {
+    display: none;
+  }
+
   .project-details {
     font-size: 14px;
   }
@@ -537,6 +434,9 @@ section .container {
     /* 1em = 16px */
     margin: -2em .5em .5em;
     padding: 1em;
+  }
+  .titulo {
+    font-size: 0.7em;
   }
 
   .contact {
@@ -569,6 +469,7 @@ section .container {
     height: 40px;
     background-size: 100%;
   }
+
 }
 
 @media screen and (max-width: 320px) {
