--- a/css/tabs.css
+++ b/css/tabs.css
@@ -2,6 +2,7 @@
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
+    width: auto;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -13,6 +14,7 @@
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
+    width: 20%;
 }
 
 /* Change background color of buttons on hover */
@@ -31,6 +33,7 @@
     padding: 6px 12px;
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
+    border: 1px solid #ccc;
 }
 @-webkit-keyframes fadeEffect {
     from {opacity: 0;}
