--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,6 @@ html, body{
   overflow-x: hidden;
 }
 
-
-
 body {
   font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
@@ -137,23 +135,18 @@ div .icon {
   width: 50px;
 }
 
-.justificar {
-  text-align: justify;
-}
-
 .redondear {
   border-radius: 30%;
+}
+
+.centrar li {
+  padding-left: 15px;
 }
 
 ol,
 ul {
   margin: 0;
   padding: 0;
-  list-style: none;
-}
-
-li {
-  font-size: 1.3em;
 }
 
 figure {
@@ -210,10 +203,12 @@ div .redes {
 
 .text-center {
   padding: 1em;
+  text-align: center;
 }
 
-.centrar {
-  text-align: center;
+div.centrar {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .spacer {
@@ -267,7 +262,7 @@ section .container {
 }
 
 /* desktop first que empieces desde el MQ más grande */
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1025px) {
   .event-list-title {
     margin-left: 0;
   }
